--- a/app/partials/guest/login.html
+++ b/app/partials/guest/login.html
@@ -102,6 +102,10 @@
                                        onclick="return false;" class="external-logo">
                                         <i class="icon-weibo icon-2x"></i>
                                     </a>
+                                    <a href="#" title="腾讯QQ账号登陆" style="text-decoration:none;padding-left: 10px;" ng-click="qqLogin()"
+                                       onclick="return false;" class="external-logo">
+                                        <img  src="img/qq.svg"  class="qq_login_log" style="display: none" svg />
+                                    </a>
                                     <a href="" title="人人账号登陆" style="text-decoration:none;padding-left: 15px"
                                        class="external-logo hide"><i
                                             class="icon-renren icon-2x"></i></a>
