--- a/app/partials/sound.html
+++ b/app/partials/sound.html
@@ -124,11 +124,18 @@
                 </a>
 
                 <div style="display: none;">
+                    <div>
                     <label style="font-size: 9px">链接分享</label><input type="text" style="width: 240px;font-size: 9px"
                                                                      value="{{config.site.url}}#/sound/{{sound.alias}}">
                     <label style="font-size: 9px">代码分享</label><input type="text" class="input-xlarge"
                                                                      style="width: 240px;font-size: 9px"
                                                                      value='<iframe width="100%" height="188" scrolling="no" frameborder="no" src="{{config.site.url}}#/player/{{sound.alias}}"></iframe>'>
+                    </div>
+                    <div>
+                        <a href="http://service.weibo.com/share/share.php?url={{config.site.url}}#/
+                            sound/{{sound.alias}}&type=button&count=0&language=zh_cn&appkey=fu5sr&searchPic=false&style=simple"
+                           target="_blank"    style="border: 0;width: 32px;height: 32px" title="分到新浪微博"><img src="img/logo/sina.png" style="width: 30px;height: 30px"/></a>
+                    </div>
                 </div>
                 <a href="#" class="button button-small button-rounded button-flat action-button"
                    ng-show="mode == 'default' && (userService.validateRolePro() || userService.validateRolesPro())"
