--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -56,8 +56,9 @@
                 </div>
                 <div id="sound_player_body_{{sound.id}}" class='sound_player_body'>
                     <div id="sound_wave_{{sound.id}}" class='sound_player_wave' style="cursor:pointer">
-                        <canvas id="sound_wave_canvas_{{sound.id}}" style="position:relative">
+                        <canvas id="sound_wave_canvas_{{sound.id}}" style="position:relative" ng-show="sound.processed">
                         </canvas>
+                        <img ng-src="img/wave.png" ng-show="!sound.processed">
                     </div>
                 </div>
                 <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer border-light-bottom'>
