--- a/app/partials/user/basicProfile.html
+++ b/app/partials/user/basicProfile.html
@@ -85,9 +85,8 @@
                 </div>
             </div>
 
-
             <div style="padding-top: 15px">
-                <label>颜色偏好</label>
+                <label>播放器颜色偏好</label>
                 <ul style="list-style-type: none;padding-left: 4%">
                     <li data-ng-repeat="color in colors"
                         style="width: 55px;height:20px;list-style-type: none;display: table-cell;padding-right:15px">
