--- a/app/partials/upload.html
+++ b/app/partials/upload.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 <div style="width: 80%">
-    <div id="progresspart" class="row-fluid hide">
+    <div id="progresspart" class="row-fluid hide" style="padding-left: 15px">
 
         <div id="progress" class="progress {{defaultSound.uploadStatus}}">
             <div class="bar"></div>
@@ -60,7 +60,7 @@
         </div>
         <div>
             <div class="row-fluid">
-                <div class="span5">
+                <div class="span5" style="padding-left: 20px">
                     <div class="{{defaultSound.imgUploadMsgClass}}">
                         <i ng-show="defaultSound.uplodingPoster"
                            class="icon-spinner icon-spin icon-large"></i>{{defaultSound.imgUploadMsg}}
